--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Delena Malan <delena.malan@gmail.com>"]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+bump2version = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
