--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0.1"
+pre-commit = "^2.13.0"
+pytest = "^6.2.4"
+black = "^21.7b0"
+mypy = "^0.910"
+flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
