--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Delena Malan <delena.malan@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+cryptography = "^3.4.7"
+pytest-cov = "^2.12.1"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0.1"
