--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,9 @@
 [settings]
-known_third_party = 
+; Taken from https://black.readthedocs.io/en/stable/compatible_configs.html#isort
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 88
+known_third_party = cryptography,pytest
