--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,27 @@
 name = "google-pay-token-decryption"
 version = "0.1.0"
 description = "Python package to verify and decrypt Google Pay tokens"
-authors = ["Delena Malan <delena.malan@gmail.com>"]
+authors = ["Delena Malan <delena@yoyowallet.com>"]
+maintainers = ["Delena Malan <delena@yoyowallet.com>"]
+
+license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/yoyowallet/google-pay-token-decryption"
+repository = "https://github.com/yoyowallet/google-pay-token-decryption"
+
+keywords = ["google pay"]
+
+classifiers=[
+    'Development Status :: 3 - Alpha',
+    'Intended Audience :: Developers',
+    'Natural Language :: English',
+    'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3.8',
+]
+
+packages = [
+    { include = "google_pay_token_decryption" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
