--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,8 @@
 name = "google-pay-token-decryption"
 version = "0.1.0"
 description = "Python package to verify and decrypt Google Pay tokens"
-authors = ["Delena Malan <delena@yoyowallet.com>"]
-maintainers = ["Delena Malan <delena@yoyowallet.com>"]
+authors = ["Yoyo Wallet <dev@yoyowallet.com>"]
+maintainers = ["Yoyo Wallet <dev@yoyowallet.com>"]
 
 license = "MIT"
 readme = "README.md"
